# deeplearning_c

./: .gitignore  CMakeLists.txt  GOALS.md  LICENSE  Lessons.md  Makefile  README.md  opencode.jsonc
.agent/: report.md  state.json  tasks.json
.agent/schema/: tasks.schema.json
examples/: mnist.c  mnist_classification.c
include/: augment.h  autograd.h  data.h  loss.h  nn.h  ops.h  optim.h  serialize.h  tensor.h  train.h
src/: augment.c  autograd.c  data.c  loss.c  nn.c  ops.c  optim.c  serialize.c  tensor.c  train.c
tests/: test_nn.c  test_optim.c  test_tensor.c
